Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46215

[Mac, Regression] Application bundle created with problematic /Versions directory

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0 RC
    • 5.5.1
    • Build tools: qmake
    • None
    • Macintosh OSX 10.9, 10.10
      Xcode 6.2
    • macOS
    • 6e3ba36a067f180c530f6c2116a97f78b1bf7cc8

    Description

      Using a checkout on the Qt 5.5 branch from about 5 hours ago, when I build an application on Macintosh 10.9 or 10.10 in which, in the .pro file, I have

      TEMPLATE = app

      , the application bundle that is created has a directory structure that looks like this:

      cd TestApp.app
      ls -R
      Contents	Versions
      
      ./Contents:
      Info.plist	MacOS		PkgInfo		Resources
      
      ./Contents/MacOS:
      TestApp
      
      ./Contents/Resources:
      empty.lproj
      
      ./Versions:
      Current
      

      Note that there is a Versions directory in the top level of the bundle. There should only be a Contents directory in the top level of the bundle.

      The presence of the Versions directory in the top level prevents codesign from being able to sign the bundle.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            aclight Adam Light
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes